@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.1.9.7"
+  "version": "3.1.9.8"
 }
